# Fortran_homework

./: CMakeLists.txt  readme.md
res/: plots_kind_16  plots_kind_4  plots_kind_8
src/: bettermath.F90  dotmath.F90  main.F90  naivemath.F90
